<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:title="@string/add_dish"
            android:id="@+id/item1"
            android:icon="@drawable/p"/>
        <item
            android:title="@string/add_receipt"
            android:id="@+id/item2"
            android:icon="@drawable/ha"/>
        <item
            android:title="@string/view_dish"
            android:id="@+id/item3"
            android:icon="@drawable/eye"/>
        <item
            android:title="@string/view_receipt"
            android:id="@+id/item4"
            android:icon="@drawable/eye"/>

    </group>



    <item android:title="@string/schedule">

        <menu>
            <item
                android:title="@string/change_email"
                android:id="@+id/item5"/>
            <item
                android:title="@string/change_password"
                android:id="@+id/item6"/>




        </menu>
    </item>
</menu>